Adjust SMSApi class for Sisli

--- a/config/secrets.yml.example
+++ b/config/secrets.yml.example
@@ -8,9 +8,13 @@ apis: &apis
   census_api_institution_code: ""
   census_api_portal_name: ""
   census_api_user_code: ""
-  sms_end_point:  ""
+  sms_end_point: ""
+  sms_xmlns: ""
   sms_username: ""
   sms_password: ""
+  sms_user_code: ""
+  sms_account_id: ""
+  sms_originator: ""
 
 http_basic_auth: &http_basic_auth
   http_basic_auth: true
